--- a/Space_station.html
+++ b/Space_station.html
@@ -11,9 +11,9 @@
     <div class="wrap">
       <div class="menu-container">
         <ul class="menu">
-          <a href="#Home">HOME</a>
-          <a href="#Gallery">GALLERY</a>
-          <a href="#contact">RESERVATIONS</a>
+          <a href="#Home"><li>HOME</li></a>
+          <a href="#Gallery"><li>GALLERY</li></a>
+          <a href="#contact"><li>RESERVATIONS</li></a>
         </ul>
       </div>
     </div>
@@ -38,11 +38,7 @@
           <!-- photo container 1 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_1.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_1.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -53,26 +49,18 @@
           <!-- photo container 2 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_2.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_2.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
               </div>
             </div>
           </div>
-          <!-- end of photo container 2--
-              <!-- photo container 3 -->
+          <!-- end of photo container 2-->
+          <!-- photo container 3 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_3.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_3.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -83,11 +71,7 @@
           <!-- photo container 4 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_4.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_4.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -98,11 +82,7 @@
           <!-- photo container 5 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_5.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_5.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -115,11 +95,7 @@
           <!-- photo container 6 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_6.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_6.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -132,11 +108,7 @@
           <!-- photo container 7 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_7.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_7.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
@@ -149,11 +121,7 @@
           <!-- photo container 8 -->
           <div class="photo-container">
             <div class="photo">
-              <img
-                src="images/Thumb/Thumbnail_8.jpg"
-                alt=""
-                style="width: 50%; height: 50%"
-              />
+              <img src="images/Thumb/Thumbnail_8.jpg" alt="" />
               <div class="photo-overlay">
                 <h3>Click TO Enlarge</h3>
                 <p>We have lots of space launches daily!</p>
